syntax = "proto3";

package fs.base.refresh;

import "zskparker.com/foundation/base/pb/base.proto";

service Refresh {

    rpc Auth (AuthRequest) returns (AuthResponse);

}

message AuthRequest {
    fs.base.Meta meta = 1;
    string refreshToken = 2;
}

message AuthResponse {
    fs.base.State state = 1;
    string accessToken = 2;
}
